fix item-notification hidden behind nav bug

--- a/client/components/CustomOrderView/AddItemNotification/add-item-notification.scss
+++ b/client/components/CustomOrderView/AddItemNotification/add-item-notification.scss
@@ -16,6 +16,7 @@
     top: -45px;
     width: 100%;
     animation: item-notification 1s ease forwards;
+    z-index: 999999;
 }
 
 .add-item-notification {
